完善 HUD 调试与多版本构建支持
恢复 /muz give debug 调试棒，完善 Debug Web HUD、记牌器、热键栏与牌桌交互；同步资源包生成、配置迁移、测试覆盖和项目文档，并更新至 1.10.11。